# simple-facial-recognition-auth-system

./: .gitignore  README.md  main.py  pyproject.toml  schema.py  settings.py  utils.py
backend/: log_config.py  main.py  services.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx
