[project]
name = "face-auth-sytem"
version = "0.1.0"
description = "Authorize actions using face data for authentication."
authors = [
    {name = "Ajiboye Adeleye Pius",email = "ajiboyeadeleye080@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
